# architecture-rag

./: .gitignore  Dockerfile  Project_template.md  README.md  golden_questions.json  pyproject.toml  template.env
assets/puml/: component.puml
chroma-data/: chroma.sqlite3
knowledge_base/: «Мадонна с веретеном» Да Винчи.md  «Мостикс» нужны Homo ludens.md  «Мостикс» с точки зрения террористов.md  Америка прошлого.md  Асексуальный мир.md  Биография ФСБмэна 1.md  Биография ФСБмэна 2.md  Бозоны Пикса.md  Бридж-Бэби.md  Бриджманит в земной мантии.md  В перевернутой радуге нет синего цвета.md  Вечная молодость президента?.md  Возвращенцы и выплески.md  Выживальщики.md  Гигантские Твари.md  Главная проблема человечества? Логистика..md  ДУМ и зодиак.md  Два года спустя — распределитель к западу от Столичного узла.md  Дело Клиффорда Унгера, часть 1.md  Дело Клиффорда Унгера, часть 2.md  Дело Клиффорда Унгера, часть 3.md  Дневник 1.md  Дневник 10.md  Дневник 11.md  Дневник 12.md  Дневник 13.md  Дневник 14.md  Дневник 15.md  Дневник 16.md  Дневник 17.md  Дневник 18.md  Дневник 19.md  Дневник 2.md  Дневник 20.md  Дневник 21.md  Дневник 22.md  Дневник 23.md  Дневник 24.md  Дневник 25.md  Дневник 26.md  (+108 more)
rag/: __main__.py  bot.py  chat.py  cli.py  knowledge_management.py  knowledge_managment.py  scrap_wiki.py  scrape_wiki.py  test.py
