[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "architecture-rag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["langchain==0.3.27", "faiss-cpu==1.12.0", "beautifulsoup4==4.14.2", "httpx==0.28.1"]

[project.optional-dependencies]
build = ["build==1.3.0"]

[tool.setuptools.packages.find]
include = ["rag*"]
