[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "architecture-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "beautifulsoup4",
    "httpx",
    "langchain-huggingface",
    "langchain-chroma",
    "langchain-community",
    "langchain-text-splitters",
    "sentence-transformers",
    "numpy<2",
]

[project.optional-dependencies]
build = ["build==1.3.0"]

[tool.setuptools.packages.find]
include = ["rag*"]
